--- a/FlexibleColumns.html
+++ b/FlexibleColumns.html
@@ -14,5 +14,9 @@
         <div class="col">1/4</div>
         <div class="col">1/4</div>
     </div>    
+    <div class="row">
+        <div class="col">1/3</div> 
+        <div class="col-2">2/3</div>
+    </div>    
 </body>
 </html>
